--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  intl: ^0.19.0
   hive: ^2.2.3
   flutter_bloc: ^8.1.5
   awesome_snackbar_content: ^0.1.3
@@ -49,6 +51,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   hive_flutter: ^1.1.0
   image_picker: ^1.1.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +74,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
+
 
   # To add assets to your application, add an assets section, like this:
   assets:
