--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   hive: ^2.2.3
   flutter_bloc: ^8.1.5
+  flutter_staggered_grid_view: ^0.4.0
   awesome_snackbar_content: ^0.1.3
   google_fonts: ^6.2.1
   go_router: ^14.1.3
@@ -52,6 +53,10 @@ dependencies:
   hive_flutter: ^1.1.0
   image_picker: ^1.1.1
   shared_preferences: ^2.2.3
+
+
+
+
 
 dev_dependencies:
   flutter_test:
